--- a/appintro.json
+++ b/appintro.json
@@ -9,7 +9,7 @@
     "🏀 **Giải Thể Thao Uy Tín**: Xem trực tiếp các giải đấu thể thao hấp dẫn nhất!",
     "📡 **Kênh Truyền Hình Sắc Nét**: Trải nghiệm các kênh truyền hình chất lượng cao với hình ảnh sắc nét!"
   ],
-  "note": "⚠️ Lưu ý: App Vua Giải Trí tổng hợp nguồn từ các bên thứ 3, vì vậy trải nghiệm có thể không hoàn hảo 100%. Tuy nhiên, chúng tôi luôn nỗ lực hết mình để cải thiện và mang đến trải nghiệm tốt nhất cho người dùng.",
+  "note": "⚠️ **Lưu ý**: **App Vua Giải Trí** được tạo ra chủ yếu để phục vụ cho mục đích **học tập**. Các nội dung trên ứng dụng được thiết kế để giúp bạn vừa thư giãn, vừa nâng cao kiến thức và kỹ năng. Ứng dụng tổng hợp nguồn từ các bên thứ ba, vì vậy trải nghiệm có thể không hoàn hảo 100%. Tuy nhiên, chúng tôi luôn nỗ lực cải thiện và mang đến trải nghiệm học tập tốt nhất cho người dùng.",
   "contact": {
     "telegram": "https://t.me/vuagiaitriapp",
     "fanpage": "https://www.facebook.com/profile.php?id=61565899498203"
