--- a/appintro.json
+++ b/appintro.json
@@ -9,7 +9,7 @@
     "🏀 **Giải Thể Thao Uy Tín**: Xem trực tiếp các giải đấu thể thao hấp dẫn nhất!",
     "📡 **Kênh Truyền Hình Sắc Nét**: Trải nghiệm các kênh truyền hình chất lượng cao với hình ảnh sắc nét!"
   ],
-  "note": "⚠️ **Lưu ý**: **App Vua Giải Trí** được tạo ra chủ yếu để phục vụ cho mục đích **học tập**. Các nội dung trên ứng dụng được thiết kế để giúp bạn vừa thư giãn, vừa nâng cao kiến thức và kỹ năng. Ứng dụng tổng hợp nguồn từ các bên thứ ba, vì vậy trải nghiệm có thể không hoàn hảo 100%. Tuy nhiên, chúng tôi luôn nỗ lực cải thiện và mang đến trải nghiệm tốt nhất cho người dùng.",
+  "note": "⚠️ **Lưu ý**: **App Vua Giải Trí 🎬📺** hiện đang trong giai đoạn **ra mắt bản thử nghiệm** trên **TV Android, Android Box, điện thoại Android và iOS**. Một số thiết bị sử dụng **ABI cũ (armeabi-v7a...)** có thể gặp hiện tượng **giật lag nhẹ**. Với thiết bị dùng **ABI mới (arm64-v8a, x86_64...)**, trải nghiệm sẽ **mượt mà hơn**. Ứng dụng **không được viết bằng native**, vì vậy một số thao tác điều hướng có thể chưa tối ưu. Tuy nhiên, **trải nghiệm phát video vẫn mượt mà, ổn định**.\n\nỨng dụng được tạo ra chủ yếu nhằm mục đích **học tập và nghiên cứu**, với nội dung tổng hợp từ nhiều **nguồn miễn phí công khai trên Internet**. Một số nội dung có thể **không phù hợp với bạn**, hãy **cân nhắc trước khi xem**. Ngoài ra, có thể có những nội dung liên quan đến **chủ quyền biển đảo, bao gồm Hoàng Sa và Trường Sa** – xin lưu ý tiếp cận thông tin một cách tỉnh táo.\n\n👉 **Hoàng Sa – Trường Sa là của Việt Nam.**",
   "contact": {
     "telegram": "https://t.me/vuagiaitriapp",
     "fanpage": "https://www.facebook.com/profile.php?id=61565899498203"
