--- a/config_app.json
+++ b/config_app.json
@@ -1,6 +1,8 @@
 {
     "hostApi": "https://vuagiaitri.online/api",
     "hostApiAccount": "https://vuagiaitri.online/api/account",
-    "hostApiFilm": "https://vuagiaitri.online/api/films"
+    "hostApiFilm": "https://vuagiaitri.online/api/films",
+    "hostApiGeneral": "https://vuagiaitri.online/api/general",
 }
+
 
